Fix z-index on templates page
The template type selection was accidentally overlapping the sticky
footer.

--- a/app/assets/stylesheets/components/pill.scss
+++ b/app/assets/stylesheets/components/pill.scss
@@ -57,7 +57,7 @@
     border: 2px solid $black;
     outline: 1px solid rgba($white, 0.1);
     position: relative;
-    z-index: 1000;
+    z-index: 10;
     color: $text-colour;
 
     &:focus {
